# LidarModelling

./: .gitmodules  ChannelTop.m  README.md  RxTop.m  TxTop.m  config.m  top_system.m
CARLA_scripts/: carla_boxes_test.py  carla_data_collector.py  carla_data_collector_all_maps.py  carla_data_collector_gui.py  carla_pointcloud_tr.py  carla_pointcloud_traffic.py  carla_utils.py  config_gui.py  dataset_visualizer.py  lidar_configs.json
CARLA_scripts/LidarModelFiles/: materials.json
cpp_simulator/conf/: dutConfig.json  dutConfigFMCW.json
cpp_simulator/scripts/: plot_data_simulator.py
cpp_simulator/src/: CMakeLists.txt  launch.bash  main.cpp  main_fmcw.cpp
cpp_simulator/src/channel_lidar/: CMakeLists.txt  ChannelLidar.cpp  ChannelLidar.h
cpp_simulator/src/common/: CMakeLists.txt  constants.h
cpp_simulator/src/common/ffModule/: convertible.cpp  convertible.h  loadSettings.cpp  loadSettings.h
cpp_simulator/src/rx_lidar/: CMakeLists.txt  RxLidarFMCW.cpp  RxLidarFMCW.h  RxLidarPulsed.cpp  RxLidarPulsed.h
cpp_simulator/src/tx_lidar/: CMakeLists.txt  TxLidarFMCW.cpp  TxLidarFMCW.h  TxLidarPulsed.cpp  TxLidarPulsed.h
data/: data_channel.txt
data/rosbag_17:57:53/: metadata.yaml
matlab_scripts/: ChannelTop.m  RxTop.m  RxTopPulsed.m  TxTop.m  TxTopPulsed.m  config.m  top_system.m  top_system_pulsed.m
results/0_100/: eval_results.txt  results.pkl
results/0_100/submit/: 000077.txt  000098.txt  000114.txt  000154.txt  000160.txt  000190.txt  000207.txt  000273.txt  000278.txt  000318.txt  000347.txt  (+1388 more)
results/25_100/: eval_results.txt  results.pkl
results/50_100/: eval_results.txt  results.pkl
scripts/: deserialize_rosbag_data.py  point_cloud2.py  serialize_rosbag_data.py
utils_scripts/: Distribucion_Gamma.ipynb
utils_scripts/blender_scripts/: generate_empty_room.py  generate_empty_room2.py
(+2762 files in other folders)
